Move data-handler.js to js folder and fix script path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div id="jspsych-target"></div>
-    <script src="data/data-handler.js"></script>
+    <script src="js/data-handler.js"></script>
     <script src="js/experiment.js"></script>
 </body>
 </html>
